--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ addons:
 #    - $HOME/.ccache  # https://github.com/travis-ci/travis-ci/issues/5853
 
 script:
-  - git fetch --unshallow
+  - git fetch --unshallow && true
   - git submodule foreach git fetch --unshalow
   - git submodule update --recursive --remote
   - make update
