--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ script:
   - set -e
   - make update
   - make release
+  - cat configure/RELEASE
   - cp -v ci/AREA_DETECTOR_RELEASE.local areaDetector/configure/RELEASE.local
   - make
 
