--- a/configure/RELEASE.template
+++ b/configure/RELEASE.template
@@ -7,3 +7,5 @@ SSCAN=$(SUPPORT)/sscan
 DEVIOCSTATS=$(SUPPORT)/iocStats
 SNCSEQ=$(SUPPORT)/seq
 AREA_DETECTOR=$(SUPPORT)/areaDetector
+MOTOR=$(SUPPORT)/motor
+MODBUS=$(SUPPORT)/modbus
