--- a/configure/RELEASE.template
+++ b/configure/RELEASE.template
@@ -7,6 +7,10 @@ SSCAN=$(SUPPORT)/sscan
 DEVIOCSTATS=$(SUPPORT)/iocStats
 SNCSEQ=$(SUPPORT)/seq
 AREA_DETECTOR=$(SUPPORT)/areaDetector
+ADCORE=$(AREA_DETECTOR)/ADCore
 MOTOR=$(SUPPORT)/motor
 MODBUS=$(SUPPORT)/modbus
 STREAM=$(SUPPORT)/stream
+QUADEM=$(SUPPORT)/quadEM
+IPAC=$(SUPPORT)/ipac
+IPUNIDIG=$(SUPPORT)/ipUnidig
