--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,7 +7,7 @@ pool:
 steps:
 - script: |
     sudo apt-get -y install libreadline-dev
-    sudo apt-get -y install pearl re2c libboost-all-dev
+    sudo apt-get -y install perl re2c libboost-all-dev
   displayName: 'Install Packages'
 
 - script: |
