Added python sctrips to modify RELEASE files

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,8 +12,11 @@ steps:
 
 - script: |
     make update
+  displayName: 'Update git repos'
+
+- script: |
     make release
-  displayName: 'Prepare Build'
+  displayName: 'Make Release Files'
   
 - script: |
     make 
