Added quadEM and added release info

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -39,17 +39,17 @@ steps:
   inputs:
     gitHubConnection: NSLS-II
     repositoryName: NSLS-II/epics-modules
+    action: 'create'
+    target: '$(Build.SourceVersion)'
+    assets: '$(Build.ArtifactStagingDirectory)/*'
+    assetUploadMode: 'delete'
   displayName: 'Create GitHub Release'
-    #action: 'create' # Options: create, edit, delete
-    #target: '$(Build.SourceVersion)' # Required when action == Create || Action == Edit
     #tagSource: 'auto' # Required when action == Create# Options: auto, manual
     #tag: # Required when action == Edit || Action == Delete || TagSource == Manual
     #title: # Optional
     #releaseNotesSource: 'file' # Optional. Options: file, input
     #releaseNotesFile: # Optional
     #releaseNotes: # Optional
-    #assets: '$(Build.ArtifactStagingDirectory)/*' # Optional
-    #assetUploadMode: 'delete' # Optional. Options: delete, replace
     #isDraft: false # Optional
     #isPreRelease: false # Optional
     #addChangeLog: true # Optional
