--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,10 +28,15 @@ steps:
 - script: |
     make 
   displayName: 'Build epics-modules'
+ 
+- script: cd epics-base && make tapfiles && make -s test-results
+  displayName: 'Run epics-base tests'
 
-- script: |
-    areaDetector/ADCore/bin/linux-x86_64/plugin-test --log_level=test_suite
-  displayName: 'Run ADCore tests'
+- script: asyn/asyn/asynPortDriver/unittest/O.linux-x86_64/asynPortDriverTest
+  displayName: 'Run asyn tests'
+
+- script: areaDetector/ADCore/bin/linux-x86_64/plugin-test --log_level=test_suite
+  displayName: 'Run areaDetector tests'
 
 # GitHub Release
 # Create, edit, or delete a GitHub release.
