--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,6 +5,8 @@ jobs:
 - job: Linux
   pool:
     vmImage: 'Ubuntu-16.04'
+  variables:
+    EPICS_HOST_ARCH: 'linux-x86_64'
   
   steps:
   - script: |
@@ -63,6 +65,8 @@ jobs:
 - job: Windows
   pool:
     vmImage: 'vs2017-win2016'
+  variables:
+    EPICS_HOST_ARCH: 'windows-x64-static'
   steps:
   - script: make update
     displayName: 'Update git sources'
