--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -68,7 +68,7 @@ jobs:
   variables:
     EPICS_HOST_ARCH: 'windows-x64-static'
   steps:
-  - script: ppm install ExtUtils::Command
+  - script: cpan install ExtUtils::Command
     displayName: 'Install deps'
   - script: make update
     displayName: 'Update git sources'
