--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -68,7 +68,9 @@ jobs:
   variables:
     EPICS_HOST_ARCH: 'windows-x64-static'
   steps:
-  - script: cpan install ExtUtils::Command
+  - script: |
+      git clone https://github.com/microsoft/vcpkg
+      vcpkg/bootstrap-vcpkg.bat
     displayName: 'Install deps'
   - script: make update
     displayName: 'Update git sources'
