Added strawberry perl

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -72,6 +72,7 @@ jobs:
       git clone https://github.com/microsoft/vcpkg
       vcpkg/bootstrap-vcpkg.bat
       vcpkg search
+      vcpkg install strawberryperl
     displayName: 'Install deps'
   - script: make update
     displayName: 'Update git sources'
