--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -72,6 +72,8 @@ jobs:
       git clone https://github.com/microsoft/vcpkg
       vcpkg/bootstrap-vcpkg.bat
       vcpkg install strawberryperl
+      perl -v
+      cpan ExtUtils::Command
     displayName: 'Install deps'
   - script: make update
     displayName: 'Update git sources'
