--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -70,9 +70,9 @@ jobs:
   steps:
   - script: |
       git clone https://github.com/microsoft/vcpkg
-      ./vcpkg/bootstrap-vcpkg.bat
+      vcpkg/bootstrap-vcpkg.bat
     displayName: 'Install deps'
-  - script: ./vcpkg/vcpkg.exe install strawberryperl
+  - script: vcpkg/vcpkg.exe install strawberryperl
   - script: make update
     displayName: 'Update git sources'
   - script: make release
