--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -44,24 +44,24 @@ jobs:
   
   # GitHub Release
   # Create, edit, or delete a GitHub release.
-  - task: GitHubRelease@0
-    inputs:
-      gitHubConnection: NSLS-II
-      repositoryName: NSLS-II/epics-modules
-      action: 'create'
-      target: '$(Build.SourceVersion)'
-      assets: '$(Build.ArtifactStagingDirectory)/*'
-      assetUploadMode: 'replace'
-      tagSource: 'auto'
-      tag: '$(tagName)'
-      addChangeLog: true
-    displayName: 'Create GitHub Release'
-      #title: # Optional
-      #releaseNotesSource: 'file' # Optional. Options: file, input
-      #releaseNotesFile: # Optional
-      #releaseNotes: # Optional
-      #isDraft: false # Optional
-      #isPreRelease: false # Optional
+  #- task: GitHubRelease@0
+  #  inputs:
+  #    gitHubConnection: NSLS-II
+  #    repositoryName: NSLS-II/epics-modules
+  #    action: 'create'
+  #    target: '$(Build.SourceVersion)'
+  #    assets: '$(Build.ArtifactStagingDirectory)/*'
+  #    assetUploadMode: 'replace'
+  #    tagSource: 'auto'
+  #    tag: '$(tagName)'
+  #    addChangeLog: true
+  #  displayName: 'Create GitHub Release'
+  #    #title: # Optional
+  #    #releaseNotesSource: 'file' # Optional. Options: file, input
+  #    #releaseNotesFile: # Optional
+  #    #releaseNotes: # Optional
+  #    #isDraft: false # Optional
+  #    #isPreRelease: false # Optional
 - job: Windows
   pool:
     vmImage: 'vs2017-win2016'
@@ -70,9 +70,9 @@ jobs:
   steps:
   - script: |
       git clone https://github.com/microsoft/vcpkg
-      vcpkg/bootstrap-vcpkg.bat
+      .\vcpkg\bootstrap-vcpkg.bat
     displayName: 'Install deps'
-  - script: vcpkg install strawberryperl
+  - script: .\vcpkg\vcpkg install strawberryperl
   - script: make update
     displayName: 'Update git sources'
   - script: make release
