--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -68,11 +68,11 @@ jobs:
   variables:
     EPICS_HOST_ARCH: 'windows-x64-static'
   steps:
-  - script: |
-      git clone https://github.com/microsoft/vcpkg
-      .\vcpkg\bootstrap-vcpkg.bat
-    displayName: 'Install deps'
-  - script: choco install strawberryperl
+      #  - script: |
+      #      git clone https://github.com/microsoft/vcpkg
+      #      .\vcpkg\bootstrap-vcpkg.bat
+      #    displayName: 'Install deps'
+  - script: choco install -y strawberryperl
   - script: make update
     displayName: 'Update git sources'
   - script: make release
