--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -77,6 +77,6 @@ jobs:
     displayName: 'Update RELEASE files'
   - script: |
       set PATH=C:\Strawberry\perl\bin;%PATH%
-      "C:\Program Files (x86)\Microsoft Visual Studio\2017\Enterprise\VC\Auxiliary\Build\vcvarsall.bat" amd64
+      call "C:\Program Files (x86)\Microsoft Visual Studio\2017\Enterprise\VC\Auxiliary\Build\vcvarsall.bat" amd64
       make -j1 epics-base
     displayName: 'Build areaDetector'
