Added script to set path

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -80,7 +80,9 @@ jobs:
       call ci/setup_epics.bat
       make epics-base
     displayName: 'Build epics-base'
-  - script: cd epics-base && make tapfiles && make -s test-results
+  - script: |
+      call ci/setup_epics.bat
+      cd epics-base && make tapfiles && make -s test-results
     displayName: 'Run epics-base tests'
   - script: |
       call ci/setup_epics.bat
