--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -70,9 +70,9 @@ jobs:
     VC_ARCH: 'amd64'
   steps:
   - script: |
-      choco install -y strawberryperl
       dir C:\Strawberry\perl\bin
-      C:\Strawberry\perl\bin\cpanm install Test::Harness
+      set PATH=C:\Strawberry\perl\bin;%PATH%
+      C:\Strawberry\perl\bin\cpan install Test::Harness
     displayName: 'Install Packages'
   - script: make update
     displayName: 'Update git repos'
