--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -44,18 +44,17 @@ jobs:
   
   # GitHub Release
   # Create, edit, or delete a GitHub release.
-  #- task: GitHubRelease@0
-  #  inputs:
-  #    gitHubConnection: NSLS-II
-  #    repositoryName: NSLS-II/epics-modules
-  #    action: 'create'
-  #    target: '$(Build.SourceVersion)'
-  #    assets: '$(Build.ArtifactStagingDirectory)/*'
-  #    assetUploadMode: 'replace'
-  #    tagSource: 'auto'
-  #    tag: '$(tagName)'
-  #    addChangeLog: true
-  #  displayName: 'Create GitHub Release'
+  - task: GitHubRelease@0
+    inputs:
+      gitHubConnection: NSLS-II
+      repositoryName: NSLS-II/epics-modules
+      action: 'edit'
+      target: '$(Build.SourceVersion)'
+      assets: '$(Build.ArtifactStagingDirectory)/*'
+      assetUploadMode: 'replace'
+      tagSource: 'Git tag'
+      tag: '0.1'
+    displayName: 'Create GitHub Release'
   #    #title: # Optional
   #    #releaseNotesSource: 'file' # Optional. Options: file, input
   #    #releaseNotesFile: # Optional
@@ -86,5 +85,5 @@ jobs:
       call ci/setup_epics.bat
       make asyn
     displayName: 'Build asyn'
-  - script: asyn/asyn/asynPortDriver/unittest/O.%EPICS_HOST_ARCH%/asynPortDriverTest
+  - script: .\asyn\asyn\asynPortDriver\unittest\O.%EPICS_HOST_ARCH%\asynPortDriverTest
     displayName: 'Run asyn tests'
