--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -48,12 +48,12 @@ jobs:
     inputs:
       gitHubConnection: NSLS-II
       repositoryName: NSLS-II/epics-modules
-      action: 'edit'
+      action: 'create'
       target: '$(Build.SourceVersion)'
-      assets: '$(Build.ArtifactStagingDirectory)/*'
+      #assets: '$(Build.ArtifactStagingDirectory)/*'
       assetUploadMode: 'replace'
       tagSource: 'Git tag'
-      tag: '0.1'
+      tag: 'v0.1'
     displayName: 'Create GitHub Release'
   #    #title: # Optional
   #    #releaseNotesSource: 'file' # Optional. Options: file, input
@@ -82,5 +82,6 @@ jobs:
   - script: |
       call .\ci\setup_epics.bat
       PATH
+      where perl
       make areaDetector
     displayName: 'Build areaDetector'
