--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -76,12 +76,15 @@ jobs:
   - script: make release
     displayName: 'Update RELEASE files'
   - script: |
-      call .\ci\setup_epics.bat
+      call "C:\Program Files (x86)\Microsoft Visual Studio\2017\Enterprise\VC\Auxiliary\Build\vcvarsall.bat" %VC_ARCH%
+      set PATH=C:\Strawberry\c\bin;C:\Strawberry\perl\site\bin;C:\Strawberry\perl\bin;%PATH%
+      PATH
+      where perl
+    displayName: 'Setup Env'
+  - script: |
+      PATH
       make epics-base
     displayName: 'Build epics-base'
   - script: |
-      call .\ci\setup_epics.bat
-      PATH
-      where perl
       make areaDetector
     displayName: 'Build areaDetector'
