Added paths to build

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -80,11 +80,12 @@ jobs:
       set PATH=C:\Strawberry\c\bin;C:\Strawberry\perl\site\bin;C:\Strawberry\perl\bin;%PATH%
       PATH
       where perl
-    displayName: 'Setup Env'
-  - script: |
-      PATH
       make epics-base
     displayName: 'Build epics-base'
   - script: |
+      call "C:\Program Files (x86)\Microsoft Visual Studio\2017\Enterprise\VC\Auxiliary\Build\vcvarsall.bat" %VC_ARCH%
+      set PATH=C:\Strawberry\c\bin;C:\Strawberry\perl\site\bin;C:\Strawberry\perl\bin;%PATH%
+      PATH
+      where perl
       make areaDetector
     displayName: 'Build areaDetector'
