--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -72,10 +72,11 @@ jobs:
     displayName: 'Update git repos'
   - script: make release
     displayName: 'Update RELEASE files'
-  - script: |
+  - script: | 
+      PATH
       where make
       where where
-      set PATH=C:\ProgramData\Chocolatey\bin
+      set PATH=C:\ProgramData\Chocolatey\bin;C:\Windows\System32
       call "C:\Program Files (x86)\Microsoft Visual Studio\2017\Enterprise\VC\Auxiliary\Build\vcvarsall.bat" %VC_ARCH%
       set PATH=C:\Strawberry\c\bin;C:\Strawberry\perl\site\bin;C:\Strawberry\perl\bin;%PATH%
       PATH
