--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -65,7 +65,7 @@ jobs:
   pool:
       vmImage: 'vs2017-win2016'
   variables:
-    EPICS_HOST_ARCH: 'windows-x64'
+    EPICS_HOST_ARCH: 'windows-x64-static'
     VC_ARCH: 'amd64'
   steps:
   - script: make update
