Added new versioning info

--- a/configure/VERSIONS.example
+++ b/configure/VERSIONS.example
@@ -1,16 +1,16 @@
-EPICS_BASE_VERSION    := $(or $(EPICS_BASE_VERSION), 7.0)
-ASYN_VERSION          := $(or $(ASYN_VERSION), master)
-AUTOSAVE_VERSION      := $(or $(AUTOSAVE_VERSION), master)
-BUSY_VERSION          := $(or $(BUSY_VERSION), master)
-CALC_VERSION          := $(or $(CALC_VERSION), master)
-SSCAN_VERSION         := $(or $(SSCAN_VERSION), master)
-DEVIOCSTATS_VERSION   := $(or $(DEVIOCSTATS_VERSION), master)
-SNCSEQ_VERSION        := $(or $(SNCSEQ_VERSION), master)
-AREA_DETECTOR_VERSION := $(or $(AREA_DETECTOR_VERSION), master)
-ADCORE_VERSION        := $(or $(ADCORE_VERSION), master)
-MOTOR_VERSION         := $(or $(MOTOR_VERSION), master)
-MODBUS_VERSION        := $(or $(MODBUS_VERSION), master)
-STREAM_VERSION        := $(or $(STREAM_VERSION), master)
-QUADEM_VERSION        := $(or $(QUADEM_VERSION), master)
-IPAC_VERSION          := $(or $(IPAC_VERSION), master)
-IPUNIDIG_VERSION      := $(or $(IPUNIDIG_VERSION), master)
+EPICS_BASE_VERSION    := 7.0
+ASYN_VERSION          := R4-34
+AUTOSAVE_VERSION      := R5-9
+BUSY_VERSION          := R1-7
+CALC_VERSION          := R3-7-1
+SSCAN_VERSION         := R2-11-1
+DEVIOCSTATS_VERSION   := 3.1.15
+SNCSEQ_VERSION        := master
+AREA_DETECTOR_VERSION := R3-4
+ADCORE_VERSION        := R3-4
+MOTOR_VERSION         := R6-11
+MODBUS_VERSION        := R2-11
+STREAM_VERSION        := R2-7-7b
+QUADEM_VERSION        := R9-2
+IPAC_VERSION          := 2.15
+IPUNIDIG_VERSION      := R2-11
