--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -68,14 +68,14 @@ jobs:
     BOOST_VERSION: '1_69_0'
 
   steps:
-  - script: |
-      curl -Lo boost.zip  https://dl.bintray.com/boostorg/release/1.69.0/source/boost_%BOOST_VERSION%.zip
-      unzip -q boost.zip
-      cd boost_%BOOST_VERSION%
-      call bootstrap.bat
-      .\b2 address-model=64 architecture=x86 --with-test link=static --prefix=%BUILD_STAGINGDIRECTORY%/deps install
-    displayName: Build Boost
-
+      #  - script: |
+      #      curl -Lo boost.zip  https://dl.bintray.com/boostorg/release/1.69.0/source/boost_%BOOST_VERSION%.zip
+      #      unzip -q boost.zip
+      #      cd boost_%BOOST_VERSION%
+      #      call bootstrap.bat
+      #      .\b2 address-model=64 architecture=x86 --with-test link=static --prefix=%BUILD_STAGINGDIRECTORY%/deps install
+      #    displayName: Build Boost
+      #
   - script: make update
     displayName: 'Update git repos'
 
