Ignore debian building

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@ configure/VERSIONS
 configure/VERSIONS.*
 release
 *.swp
+debian/files
+debian/epics-modules
+debian/epics-modules.*
+debian/debhelper-build-stamp
